src/test/ui/unsized/unsized-enum.stderr
error[E0277]: the size for values of type `T` cannot be known at compilation time
  --> $DIR/unsized-enum.rs:17:36
   |
LL | fn foo2<T: ?Sized>() { not_sized::<Foo<T>>() }
   |                                    ^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `T`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = help: consider adding a `where T: std::marker::Sized` bound
note: required by `Foo`
  --> $DIR/unsized-enum.rs:15:1
   |
LL | enum Foo<U> { FooSome(U), FooNone }
   | ^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
